--- a/0.1/package.json
+++ b/0.1/package.json
@@ -3,7 +3,7 @@
         "name" : "ja",
         "version" : 0.1,
         "author" : "teamtlink",
-        "sources" : "https://teamtlink.github.io/op-pkg/0.1/ja/ja.zip",
+        "sources" : "https://teamtlink.github.io/op-package/0.1/ja/ja.zip",
         "requires" : [],
         "required-by" : [],
         "description" : "Original Pyを日本語化"
